# must-connect

./: .gitignore  CMakeLists.txt  README.md  config.json
docs/: SETUP.md  udp_protocol.md
server/: CMakeLists.txt
server/src/: config.cpp  config.h  inverter_data.h  main.cpp  modbus_reader.cpp  modbus_reader.h  threadsafe_queue.h  threadsafequeue.h  udp_sender.cpp  udp_sender.h
